<resources>
    <string name="app_name">UberClone</string>

    //activity_main
    <string name="hint_username">Enter username</string>
    <string name="hint_password">Enter password</string>
    <string name="hint_email">Enter email</string>
    <string name="radio_btn_passenger">Passenger</string>
    <string name="radio_btn_driver">Driver</string>
    <string name="btn_sign_up">Sign up</string>
    <string name="btn_log_in">Log in</string>
    <string name="txt_no_registration">Don\'t want to sign up or log in?</string>
    <string name="edt_driver_or_passenger">Are you a Driver or a Passenger?</string>
    <string name="btn_one_time_login">One time log in</string>
    <string name="logo_content_description">Photo by JESHOOTS.com from Pexels</string>
    <string name="title_activity_passenger">Passenger</string>
    <string name="btnRequest">Request a Car</string>
    <string name="cancel_order">Cancel your uber order</string>
    <string name="logout">Logout</string>
    <string name="txt_view_passenger_requests_here">View passenger requests here</string>
    <string name="btn_update_list">Update the list</string>
    <string name="get_nearby_requests">Get nearby requests</string>
    <string name="title_activity_view_locations_map">Map</string>
    <string name="btn_ride">I want to give this passenger a ride</string>

</resources>
